add data to yml files - loop thru cars

--- a/src/pages/404.html
+++ b/src/pages/404.html
@@ -1,60 +1,26 @@
+---
+title: Error
+---
 
-<div class="grid-x grid-padding-x">
-  <!--content-->
-  <div class="large-12 medium-12 small-12 cell">
-    <h1>401 Error Page</h1>
-  </div>
-</div>
-<!--worldsearchform end -->
-
-<div class="grid-x grid-padding-x">
-  <!--inner content -->
-  <div class="large-12 medium-12 small-12 cell">
-    <h1 style="width: 100%">
-      Oops! You have come across an error. Click
-      <a href="index.html">here</a> to go to Home page
-    </h1>
-
-    <br />
-  </div>
-</div>
-<!--inner content end -->
-
-<br /><br /><br /><br /><br /><br />
-
-<div class="grid-x grid-padding-x">
-  <!--footer-->
-  <footer>
+<div class="grid-container">
+  <div class="grid-x grid-padding-x">
+    <!--content-->
     <div class="large-12 medium-12 small-12 cell">
-      <ul id="footer_nav">
-        <li>
-          <a href="#" title="car-rental-home-page">Home</a>
-        </li>
-        <li>
-          <a href="#" title="car-rental-specials-page">Specials</a>
-        </li>
-        <li>
-          <a href="#" title="car-rental-cars-page">Cars</a>
-        </li>
-        <li>
-          <a href="#" title="car-rental-location-page">Locations</a>
-        </li>
-        <li>
-          <a href="#" title="car-rental-about-page">About</a>
-        </li>
-        <li>
-          <a href="#" title="car-rental-contact-page">Contact</a>
-        </li>
-      </ul>
+      <h1>401 Error Page</h1>
     </div>
-  </footer>
-</div>
-<!--footer end-->
+  </div>
+  <!--worldsearchform end -->
 
-<p class="copy">
-  Raymond Thompson 2017<br />
-  built from Photoshop template downloaded from www.phpjabber.com<br />
-  <script type="text/javascript">
-    document.write("Page Last Updated: " + document.lastModified);
-  </script>
-</p>
+  <div class="grid-x grid-padding-x">
+    <!--inner content -->
+    <div class="large-12 medium-12 small-12 cell">
+      <h1 style="width: 100%">
+        Oops! You have come across an error. Click
+        <a href="index.html">here</a> to go to Home page
+      </h1>
+
+      <br />
+    </div>
+  </div>
+</div>
+<!--row end-->
