--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -1,104 +1,82 @@
+---
+title: contact
+---
 
-<div class="grid-x grid-padding-x">
-  <div class="large-9 medium-9 small-12 columns">
-  <h1>Contact</h1>
-    <article id="left_column">
-      
-      <p>
-        Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus
-        eu nisl bibendum facilisis. Nulla cursus dolor in enim sagittis
-        fringilla. Aenean consequat tellus eu nisl bibendum facilisis.
-      </p>
-      <br /><br />
+<div class="grid-container">
+  <div class="grid-x grid-padding-x">
+    <div class="large-9 medium-9 small-12 columns">
+      <h1>Contact</h1>
+      <article id="left_column">
+        <p>
+          Nulla cursus dolor in enim sagittis fringilla. Aenean consequat tellus
+          eu nisl bibendum facilisis. Nulla cursus dolor in enim sagittis
+          fringilla. Aenean consequat tellus eu nisl bibendum facilisis.
+        </p>
+        <br /><br />
 
-      <form id="contact_form">
-        <div class="grid-x grid-padding-x">
-          <div class="large-4 medium-4 small-4 cell">
-            <label for="Name">Name</label>
+        <form id="contact_form">
+          <div class="grid-x grid-padding-x">
+            <div class="large-4 medium-4 small-4 cell">
+              <label for="Name">Name</label>
+            </div>
+            <div class="large-12 medium-12 small-12 cell">
+              <input type="text" required pattern="[a-zA-Z]+" />
+            </div>
           </div>
-          <div class="large-12 medium-12 small-12 cell">
-            <input type="text" required pattern="[a-zA-Z]+" />
-          </div>
-        </div>
 
-        <div class="grid-x grid-padding-x">
-          <div class="large-4 medium-4 small-4 cell">
-            <label for="E-mail">E-mail </label>
+          <div class="grid-x grid-padding-x">
+            <div class="large-4 medium-4 small-4 cell">
+              <label for="E-mail">E-mail </label>
+            </div>
+            <div class="large-12 medium-12 small-12 cell">
+              <input type="text" required />
+            </div>
           </div>
-          <div class="large-12 medium-12 small-12 cell">
-            <input type="text" required />
-          </div>
-        </div>
 
-        <div class="grid-x grid-padding-x">
-          <div class="large-4 medium-4 small-4 cell">
-            <label for="Message">Message</label>
+          <div class="grid-x grid-padding-x">
+            <div class="large-4 medium-4 small-4 cell">
+              <label for="Message">Message</label>
+            </div>
+            <div class="large-12 medium-12 small-12 cell">
+              <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
+            </div>
           </div>
-          <div class="large-12 medium-12 small-12 cell">
-            <textarea col="10" rows="7" pattern="[0-9][a-zA-Z]"></textarea>
+          <br />
+          <div class="grid-x grid-padding-x">
+            <div class="large-2 medium-2 small-2 cell"></div>
+            <div class="large-12 medium-12 small-12 cell">
+              <input type="submit" class="button" value="Send" />
+            </div>
           </div>
-        </div>
-        <br />
-        <div class="grid-x grid-padding-x">
-          <div class="large-2 medium-2 small-2 cell"></div>
-          <div class="large-12 medium-12 small-12 cell">
-            <input type="submit" class="button" value="Send" />
-          </div>
-        </div>
-      </form>
-      <!--end of contact form -->
-      <br /><br />
-    </article>
-  </div>
-
-  <div class="large-3 medium-3 columns cell">
-    <br /><br />
-    <aside id="right_column">
-      <br /><br /><br /><br />
-      <div class="card" id="image5">
-        <h2>Subscribe to newsletter</h2>
-        <div class="card-section">
-          <p>
-            Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
-            tellus eu nisl bibendum facilisis.
-          </p>
-        </div>
-        <form action="" method="post" class="newsletter" data-abide>
-          <input name="NAME" type="text" placeholder="Name" />
-          <!--<small class="error">Name must be letters.</small>-->
-          <input name="EMAIL" type="email" placeholder="Email" required />
-          <!--<small class="error">A valid email address is required.</small>-->
-          <input type="submit" class="link_btn" value="SUBSCRIBE" />
         </form>
-      </div>
-      <!--info_box4 end-->
-    </aside>
-    <div class="clearfix"></div>
+        <!--end of contact form -->
+        <br /><br />
+      </article>
+    </div>
+
+    <div class="large-3 medium-3 columns cell">
+      <br /><br />
+      <aside id="right_column">
+        <br /><br /><br /><br />
+        <div class="card" id="image5">
+          <h2>Subscribe to newsletter</h2>
+          <div class="card-section">
+            <p>
+              Nulla cursus dolor in enim sagittis fringilla. Aenean consequat
+              tellus eu nisl bibendum facilisis.
+            </p>
+          </div>
+          <form action="" method="post" class="newsletter" data-abide>
+            <input name="NAME" type="text" placeholder="Name" />
+            <!--<small class="error">Name must be letters.</small>-->
+            <input name="EMAIL" type="email" placeholder="Email" required />
+            <!--<small class="error">A valid email address is required.</small>-->
+            <input type="submit" class="link_btn" value="SUBSCRIBE" />
+          </form>
+        </div>
+        <!--info_box4 end-->
+      </aside>
+      <div class="clearfix"></div>
+    </div>
   </div>
 </div>
-
-<div class="grid-x grid-padding-x">
-  <!--footer-->
-  <footer>
-    <div class="large-12 medium-12 small-12 cell">
-      <ul id="footer_nav">
-        <li><a href="index.html">Home</a></li>
-        <li>
-          <a href="specials.html">Special Offers</a>
-        </li>
-        <li><a href="cars.html">Cars</a></li>
-        <li><a href="location.html">Locations</a></li>
-        <li><a href="about.html">About</a></li>
-        <li><a href="contact.html">Contact</a></li>
-      </ul>
-    </div>
-  </footer>
-</div>
-
-<p class="copy">
-  Raymond Thompson 2017 - built from Photoshop template downloaded from
-  www.phpjabber.com<br />
-  <script type="text/javascript">
-    document.write("Page Last Updated: " + document.lastModified);
-  </script>
-</p>
