--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -1,11 +1,12 @@
 ---
 title: about
+pagetitle: About
 ---
 
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
     <div class="large-9 medium-9 small-12 cell">
-      <h1>About</h1>
+      <h1>{{pagetitle}}</h1>
       <article id="left_column">
         <p>
           <strong>
