--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -6,7 +6,7 @@ title: home
   <div class="grid-x grid-padding-x" role="banner">
     <div class="large-12 medium-12 small-12 cell">
       <!--Quote_form box-->
-      <section id="quoteform" class="reveal">
+      <section id="quoteform" class="reveal" data-reveal>
         <div class="grid-x grid-padding-x">
           <div class="large-4 medium-4 small-4 cell">
             <p><span class="dropcap">1</span>Date, Time and Location</p>
@@ -25,9 +25,7 @@ title: home
           </div>
         </div>
 
-        <h1 id="quoteform-title" data-open="quoteform">
-          Get a Car Rental Quote
-        </h1>
+        <h1 id="quoteform-title">Get a Car Rental Quote</h1>
         <br />
         <!--form-->
         <form id="booking_form" class="group" action="" method="post">
@@ -167,7 +165,9 @@ title: home
           alt="car-rental-website-4x4-car"
         /><!--Banner Image-->
 
-        <button id="reveal_form_btn">Click here to get Quote</button>
+        <button id="reveal_form_btn" data-open="quoteform">
+          Click here to get Quote
+        </button>
         <!--SeeQuote_button-->
 
         <figcaption class="smll"></figcaption>
@@ -175,13 +175,13 @@ title: home
     </div>
   </div>
 
-  <div class="grid-x grid-padding-x" data-equalizer="foo">
-    <div class="large-12 medium-12 small-12 cell" data-equalizer-watch="foo">
+  <div class="grid-x grid-padding-x small-up-3 medium-up-4">
+    <div class="cell">
       <div class="card" id="image1">
         <h2>Different Makes and Models</h2>
         <div class="card-section">
           <img
-            class="front_img"
+            class="card_image"
             src="assets/img/car-rental-website-luxury-car-audi-large.png"
           />
         </div>
@@ -198,12 +198,13 @@ title: home
           >
         </div>
       </div>
-
+    </div>
+    <div class="cell">
       <div class="card" id="image2">
         <h2>Weekend Car Rental Special</h2>
         <div class="card-section">
           <img
-            class="front_img"
+            class="card_image"
             src="assets/img/car-rental-website-weekend-car-rentals-large.png"
             alt="car-rental-website-weekend-car-rentals"
           />
@@ -218,12 +219,13 @@ title: home
           >
         </div>
       </div>
-
+    </div>
+    <div class="cell">
       <div class="card" id="image3">
         <h2>Our Locations</h2>
         <div class="card-section">
           <img
-            class="front_img"
+            class="card_image"
             src="assets/img/car-rental-website-locations-map-large.png"
             alt="car-rental-website-locations-map"
           />
@@ -241,7 +243,8 @@ title: home
           >
         </div>
       </div>
-
+    </div>
+    <div class="cell">
       <div class="card" id="newsletter">
         <h2>Subscribe to Our Newsletter</h2>
         <div class="card-section">
