--- a/src/pages/locations.html
+++ b/src/pages/locations.html
@@ -1,11 +1,12 @@
 ---
 title: locations
+pagetitle: Car Hire WorldWide
 ---
 
 <div class="grid-container">
   <div class="grid-x grid-padding-x">
     <div class="large-12 medium-12 small-12 cell">
-      <h1>Car Hire WorldWide</h1>
+      <h1>{{pagetitle}}</h1>
       <article id="location_searchform">
         <h2>Over 5000 location in more than 120 countries</h2>
 
