update css -tabs

--- a/src/pages/cars.html
+++ b/src/pages/cars.html
@@ -4,7 +4,7 @@ pagetitle: Car Hire WorldWide
 ---
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x">
     <div class="large-9 medium-9 small-12 cell">
       <!--left column -->
       <h1>{{pagetitle}}</h1>
@@ -39,22 +39,22 @@ pagetitle: Car Hire WorldWide
 
           <div class="tabs-panel is-active" id="panel1c">
             {{#each cars.car}}
-            <article class="cars_box">
-              <div class="media-object cars_box_img">
-                <div class="responsive car">
-                  <img
-                    src="{{imageUrl}}"
-                    title="car-rental-website-cheverolet-aveo"
-                  />
-                </div>
+            <article class="media-object cars_box">
+              <div class="media-object-section">
+                <img
+                  class="cars_box_img"
+                  src="{{imageUrl}}"
+                  title="car-rental-website-cheverolet-aveo"
+                />
               </div>
 
-              <div class="media-object cars_box_txt">
-                <p>{{type}}</p>
-                <p>{{name}}</p>
-                <p>{{text}}</p>
-
-                <div class="media-object-section car-icons-box">
+              <div class="media-object-section">
+                <div class="cars_box_txt">
+                  <p>{{type}}</p>
+                  <p>{{name}}</p>
+                  <p>{{text}}</p>
+                </div>
+                <div class="car-icons-box">
                   <figure class="car-icons">
                     <img
                       src="assets/img/car-rental-website-passengers-large.png"
@@ -95,22 +95,22 @@ pagetitle: Car Hire WorldWide
           <!--panel2-->
           <div class="tabs-panel" id="panel2c">
             {{#each cars.economy}}
-            <article class="cars_box">
-              <div class="media-object cars_box_img">
-                <div class="responsive car">
-                  <img
-                    src="{{imageUrl}}"
-                    title="car-rental-website-cheverolet-aveo"
-                  />
-                </div>
+            <article class="media-object cars_box">
+              <div class="media-object-section">
+                <img
+                  class="cars_box_img"
+                  src="{{imageUrl}}"
+                  title="car-rental-website-cheverolet-aveo"
+                />
               </div>
 
-              <div class="media-object cars_box_txt">
-                <p>{{type}}</p>
-                <p>{{name}}</p>
-                <p>{{text}}</p>
-
-                <div class="media-object-section car-icons-box">
+              <div class="media-object-section">
+                <div class="cars_box_txt">
+                  <p>{{type}}</p>
+                  <p>{{name}}</p>
+                  <p>{{text}}</p>
+                </div>
+                <div class="car-icons-box">
                   <figure class="car-icons">
                     <img
                       src="assets/img/car-rental-website-passengers-large.png"
@@ -152,22 +152,22 @@ pagetitle: Car Hire WorldWide
           <!--panel3-->
           <div class="tabs-panel" id="panel3c">
             {{#each cars.standard}}
-            <article class="cars_box">
-              <div class="media-object cars_box_img">
-                <div class="responsive car">
-                  <img
-                    src="{{imageUrl}}"
-                    title="car-rental-website-cheverolet-aveo"
-                  />
-                </div>
+            <article class="media-object cars_box">
+              <div class="media-object-section">
+                <img
+                  class="cars_box_img"
+                  src="{{imageUrl}}"
+                  title="car-rental-website-cheverolet-aveo"
+                />
               </div>
 
-              <div class="media-object cars_box_txt">
-                <p>{{type}}</p>
-                <p>{{name}}</p>
-                <p>{{text}}</p>
-
-                <div class="media-object-section car-icons-box">
+              <div class="media-object-section">
+                <div class="cars_box_txt">
+                  <p>{{type}}</p>
+                  <p>{{name}}</p>
+                  <p>{{text}}</p>
+                </div>
+                <div class="car-icons-box">
                   <figure class="car-icons">
                     <img
                       src="assets/img/car-rental-website-passengers-large.png"
@@ -209,22 +209,22 @@ pagetitle: Car Hire WorldWide
           <!--panel4-->
           <div class="tabs-panel" id="panel4c">
             {{#each cars.premium}}
-            <article class="cars_box">
-              <div class="media-object cars_box_img">
-                <div class="responsive car">
-                  <img
-                    src="{{imageUrl}}"
-                    title="car-rental-website-cheverolet-aveo"
-                  />
-                </div>
+            <article class="media-object cars_box">
+              <div class="media-object-section">
+                <img
+                  class="cars_box_img"
+                  src="{{imageUrl}}"
+                  title="car-rental-website-cheverolet-aveo"
+                />
               </div>
 
-              <div class="media-object cars_box_txt">
-                <p>{{type}}</p>
-                <p>{{name}}</p>
-                <p>{{text}}</p>
-
-                <div class="media-object-section car-icons-box">
+              <div class="media-object-section">
+                <div class="cars_box_txt">
+                  <p>{{type}}</p>
+                  <p>{{name}}</p>
+                  <p>{{text}}</p>
+                </div>
+                <div class="car-icons-box">
                   <figure class="car-icons">
                     <img
                       src="assets/img/car-rental-website-passengers-large.png"
@@ -266,22 +266,22 @@ pagetitle: Car Hire WorldWide
           <!--panel5-->
           <div class="tabs-panel" id="panel5c">
             {{#each cars.luxury}}
-            <article class="cars_box">
-              <div class="media-object cars_box_img">
-                <div class="responsive car">
-                  <img
-                    src="{{imageUrl}}"
-                    title="car-rental-website-cheverolet-aveo"
-                  />
-                </div>
+            <article class="media-object cars_box">
+              <div class="media-object-section">
+                <img
+                  class="cars_box_img"
+                  src="{{imageUrl}}"
+                  title="car-rental-website-cheverolet-aveo"
+                />
               </div>
 
-              <div class="media-object cars_box_txt">
-                <p>{{type}}</p>
-                <p>{{name}}</p>
-                <p>{{text}}</p>
-
-                <div class="media-object-section car-icons-box">
+              <div class="media-object-section">
+                <div class="cars_box_txt">
+                  <p>{{type}}</p>
+                  <p>{{name}}</p>
+                  <p>{{text}}</p>
+                </div>
+                <div class="car-icons-box">
                   <figure class="car-icons">
                     <img
                       src="assets/img/car-rental-website-passengers-large.png"
