--- a/src/pages/contact.html
+++ b/src/pages/contact.html
@@ -4,7 +4,7 @@ pagetitle: Contact
 ---
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x">
     <div class="large-9 medium-9 small-12 columns">
       <h1>Contact</h1>
       <article id="left_column">
