--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,7 +3,7 @@ title: home
 ---
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x" role="banner">
+  <div class="grid-x" role="banner">
     <div class="large-12 medium-12 small-12 cell">
       <!--Quote_form box-->
       <section id="quoteform" class="reveal" data-reveal>
