--- a/src/pages/specials.html
+++ b/src/pages/specials.html
@@ -74,7 +74,7 @@ pagetitle: Car Hire WorldWide
         <!--panel2-->
         <div class="tabs-panel" id="panel2c">
           {{#each specials.economy}}
-          <article class="specials_card">
+          <article class="specials_card cell">
             <div class="media-object specials_card_img">
               <div class="media-object-section float-right">
                 <div class="specials_image">
@@ -99,11 +99,11 @@ pagetitle: Car Hire WorldWide
               <li>Maximum rental period: {{maxrentalperiod}}</li>
               <li>Advance booking time: {{advancedbooking}}</li>
             </ul>
-            <div class="specials_btn">
-              <span class="special_price"
-                >&pound;{{specialprice}}<span>per Day</span></span
-              >
-              <span class="cont_btn"><a href=""> Continue </a></span>
+            <div class="specials_cta">
+              <span class="specials_price"
+                >&pound;{{specialprice}}<span>per Day</span>
+              </span>
+              <span class="specials_btn"><a href=""> Continue </a></span>
             </div>
           </article>
           {{/each}}
@@ -112,7 +112,7 @@ pagetitle: Car Hire WorldWide
         <!--panel3-->
         <div class="tabs-panel" id="panel3c">
           {{#each specials.standard}}
-          <article class="specials_card">
+          <article class="specials_card cell">
             <div class="media-object specials_card_img">
               <div class="media-object-section float-right">
                 <div class="specials_image">
@@ -137,11 +137,11 @@ pagetitle: Car Hire WorldWide
               <li>Maximum rental period: {{maxrentalperiod}}</li>
               <li>Advance booking time: {{advancedbooking}}</li>
             </ul>
-            <div class="specials_btn">
-              <span class="special_price"
-                >&pound;{{specialprice}}<span>per Day</span></span
-              >
-              <span class="cont_btn"><a href=""> Continue </a></span>
+            <div class="specials_cta">
+              <span class="specials_price"
+                >&pound;{{specialprice}}<span>per Day</span>
+              </span>
+              <span class="specials_btn"><a href=""> Continue </a></span>
             </div>
           </article>
           {{/each}}
@@ -150,7 +150,7 @@ pagetitle: Car Hire WorldWide
         <!--panel4-->
         <div class="tabs-panel" id="panel4c">
           {{#each specials.hybrid}}
-          <article class="specials_card">
+          <article class="specials_card cell">
             <div class="media-object specials_card_img">
               <div class="media-object-section float-right">
                 <div class="specials_image">
@@ -175,11 +175,11 @@ pagetitle: Car Hire WorldWide
               <li>Maximum rental period: {{maxrentalperiod}}</li>
               <li>Advance booking time: {{advancedbooking}}</li>
             </ul>
-            <div class="specials_btn">
-              <span class="special_price"
-                >&pound;{{specialprice}}<span>per Day</span></span
-              >
-              <span class="cont_btn"><a href=""> Continue </a></span>
+            <div class="specials_cta">
+              <span class="specials_price"
+                >&pound;{{specialprice}}<span>per Day</span>
+              </span>
+              <span class="specials_btn"><a href=""> Continue </a></span>
             </div>
           </article>
           {{/each}}
@@ -188,7 +188,7 @@ pagetitle: Car Hire WorldWide
         <!--panel5-->
         <div class="tabs-panel" id="panel5c">
           {{#each specials.luxury}}
-          <article class="specials_card">
+          <article class="specials_card cell">
             <div class="media-object specials_card_img">
               <div class="media-object-section float-right">
                 <div class="specials_image">
@@ -213,11 +213,11 @@ pagetitle: Car Hire WorldWide
               <li>Maximum rental period: {{maxrentalperiod}}</li>
               <li>Advance booking time: {{advancedbooking}}</li>
             </ul>
-            <div class="specials_btn">
-              <span class="special_price"
-                >&pound;{{specialprice}}<span>per Day</span></span
-              >
-              <span class="cont_btn"><a href=""> Continue </a></span>
+            <div class="specials_cta">
+              <span class="specials_price"
+                >&pound;{{specialprice}}<span>per Day</span>
+              </span>
+              <span class="specials_btn"><a href=""> Continue </a></span>
             </div>
           </article>
           {{/each}}
