--- a/src/pages/about.html
+++ b/src/pages/about.html
@@ -4,7 +4,7 @@ pagetitle: About
 ---
 
 <div class="grid-container">
-  <div class="grid-x grid-padding-x">
+  <div class="grid-x">
     <div class="large-9 medium-9 small-12 cell">
       <h1>{{pagetitle}}</h1>
       <article id="left_column">
