update css - update packages - update html

--- a/src/pages/cars.html
+++ b/src/pages/cars.html
@@ -84,9 +84,7 @@ pagetitle: Car Hire WorldWide
 
                 <p></p>
 
-                <figure class="carsbutton">
-                  <a href="#">Continue &rsaquo;</a>
-                </figure>
+                <a href="#" class="carsbutton">Continue &rsaquo;</a>
               </div>
             </article>
             {{/each}}
@@ -140,9 +138,7 @@ pagetitle: Car Hire WorldWide
 
                 <p></p>
 
-                <figure class="carsbutton">
-                  <a href="#">Continue &rsaquo;</a>
-                </figure>
+                <a href="#" class="carsbutton">Continue &rsaquo;</a>
               </div>
             </article>
             {{/each}}
@@ -197,9 +193,7 @@ pagetitle: Car Hire WorldWide
 
                 <p></p>
 
-                <figure class="carsbutton">
-                  <a href="#">Continue &rsaquo;</a>
-                </figure>
+                <a href="#" class="carsbutton">Continue &rsaquo;</a>
               </div>
             </article>
             {{/each}}
@@ -254,9 +248,7 @@ pagetitle: Car Hire WorldWide
 
                 <p></p>
 
-                <figure class="carsbutton">
-                  <a href="#">Continue &rsaquo;</a>
-                </figure>
+                <a href="#" class="carsbutton">Continue &rsaquo;</a>
               </div>
             </article>
             {{/each}}
@@ -311,9 +303,7 @@ pagetitle: Car Hire WorldWide
 
                 <p></p>
 
-                <figure class="carsbutton">
-                  <a href="#">Continue &rsaquo;</a>
-                </figure>
+                <a href="#" class="carsbutton">Continue &rsaquo;</a>
               </div>
             </article>
             {{/each}}
