--- a/src/pages/index.html
+++ b/src/pages/index.html
@@ -3,10 +3,10 @@ title: home
 ---
 
 <div class="grid-container">
-  <div class="grid-x" role="banner">
+  <div class="grid-x grid-padding-x" role="banner">
     <div class="large-12 medium-12 small-12 cell">
       <!--Quote_form box-->
-      <section id="quoteform" class="reveal" data-reveal>
+      <section id="quoteform">
         <div class="grid-x grid-padding-x">
           <div class="large-4 medium-4 small-4 cell">
             <p><span class="dropcap">1</span>Date, Time and Location</p>
@@ -165,9 +165,9 @@ title: home
           alt="car-rental-website-4x4-car"
         /><!--Banner Image-->
 
-        <button id="reveal_form_btn" data-open="quoteform">
+        <!-- <button id="reveal_form_btn" data-open="quoteform">
           Click here to get Quote
-        </button>
+        </button> -->
         <!--SeeQuote_button-->
 
         <figcaption class="smll"></figcaption>
