--- a/src/pages/cars.html
+++ b/src/pages/cars.html
@@ -4,7 +4,7 @@ pagetitle: Car Hire WorldWide
 ---
 
 <div class="grid-container">
-  <div class="grid-x">
+  <div class="grid-x grid-margin-x">
     <div class="large-9 medium-9 small-12 cell">
       <!--left column -->
       <h1>{{pagetitle}}</h1>
@@ -13,6 +13,10 @@ pagetitle: Car Hire WorldWide
 
         <ul
           class="tabs"
+          data-deep-link="true"
+          data-update-history="true"
+          data-deep-link-smudge="true"
+          data-deep-link-smudge-delay="500"
           data-active-collapse="true"
           data-tabs
           id="collapsing-tabs"
@@ -322,7 +326,8 @@ pagetitle: Car Hire WorldWide
           <div class="card-section">
             <img
               class="card_image"
-              src="assets/img/car-rental-website-weekend-car-rentals-large.png"
+              data-interchange="[assets/img/car-rental-website-weekend-car-rentals-small.png, small], [assets/img/car-rental-website-weekend-car-rentals-medium.png, medium], [assets/img/car-rental-website-weekend-car-rentals-large.png, large]"
+              src="#"
             />
           </div>
           <div class="card-section">
@@ -343,7 +348,8 @@ pagetitle: Car Hire WorldWide
           <div class="card-section">
             <img
               class="card_image"
-              src="assets/img/car-rental-website-locations-map-large.png"
+              data-interchange="[assets/img/car-rental-website-locations-map-small.png, small], [assets/img/car-rental-website-locations-map-medium.png, medium], [assets/img/car-rental-website-locations-map-large.png, large]"
+              src="#"
               alt="car-rental-website-locations-map"
             />
           </div>
